[package]
name = "gib"
version = "0.1.0"
authors = ["David Sánchez <david.sanchez.lt@gmail.com>"]
license = "GPL-3.0"
description = "A .gitignore bootstrapper for projects that use git"
readme = "README.md"
homepage = "https://gitlab.com/DavSanchez/gib.git"
repository = "https://gitlab.com/DavSanchez/gib.git"
keywords = ["cli", "git", "gitignore", "vcs"]
categories = ["command-line-utilities"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9"
structopt = "0.3"