[package]
name = "gib"
version = "0.2.3"
authors = ["David Sánchez <david.sanchez.lt@gmail.com>"]
license = "MIT OR GPL-3.0"
description = "A .gitignore bootstrapper for projects that use git"
readme = "README.md"
homepage = "https://gitlab.com/DavSanchez/gib"
documentation = "https://gitlab.com/DavSanchez/gib"
repository = "https://gitlab.com/DavSanchez/gib"
keywords = ["cli", "git", "gitignore", "vcs"]
categories = ["command-line-utilities"]
edition = "2018"
exclude = ["gitignore/*", "!gitignore/**/*.gitignore"]

[badges]
gitlab = { repository = "DavSanchez/gib" }
travis-ci = { repository = "DavSanchez/gib" }

[dependencies]
exitcode = "1.1"
itertools = "0.9"
structopt = "0.3"

[dev-dependencies]
assert_cmd = "1"
assert_fs = "1"
predicates = "1"